--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,800,900" rel="stylesheet">
 </head>
 <body>
-
+    <header>
+        <section class="header_top">
+            <a class="logo" href="#"><img src="images/logo.svg" alt=""></a>
+            <a class="right_header_link" href="#">azərbaycanca</a>
+        </section>
+        <section class="botttom_header">
+            <h1 class="page_title">Продавайте через магазины Tap.az</h1>
+            <p class="main_descripton">Почему это выгодно и удобно — рассказываем на примере кругосветного путешествия</p>
+            <div class="image_block">
+<!--                <img src="images/rocket.jpg" alt="">-->
+            </div>
+            <a class="create_btn btn" href="#">Создать магазин</a>
+        </section>
+    </header>
 </body>
 </html>
