--- a/index.html
+++ b/index.html
@@ -23,5 +23,37 @@
             <a class="create_btn btn" href="#">Создать магазин</a>
         </section>
     </header>
+    <div class="content">
+        <section class="business_block">
+            <h2 class="business_title">Tap.az для малого бизнеса:</h2>
+            <div class="business_items_wrap">
+                <div class="business_item">
+                    <img src="images/business_image_1.svg" alt="">
+                    <p class="business_item_title">Пакет платных услуг в подарок</p>
+                    <p class="business_item_descr">Вы получите кешбэк в виде пакета услуг VIP и Премиум</p>
+                </div>
+                <div class="business_item">
+                    <img src="images/business_image_2.svg" alt="">
+                    <p class="business_item_title">Пакет платных услуг в подарок</p>
+                    <p class="business_item_descr">Вы получите кешбэк в виде пакета услуг VIP и Премиум</p>
+                </div>
+                <div class="business_item">
+                    <img src="images/business_image_3.svg" alt="">
+                    <p class="business_item_title">Пакет платных услуг в подарок</p>
+                    <p class="business_item_descr">Вы получите кешбэк в виде пакета услуг VIP и Премиум</p>
+                </div>
+                <div class="business_item">
+                    <img src="images/business_image_4.svg" alt="">
+                    <p class="business_item_title">Пакет платных услуг в подарок</p>
+                    <p class="business_item_descr">Вы получите кешбэк в виде пакета услуг VIP и Премиум</p>
+                </div>
+                <div class="business_item">
+                    <img src="images/business_image_5.svg" alt="">
+                    <p class="business_item_title">Пакет платных услуг в подарок</p>
+                    <p class="business_item_descr">Вы получите кешбэк в виде пакета услуг VIP и Премиум</p>
+                </div>
+            </div>
+        </section>
+    </div> 
 </body>
 </html>
