--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
                 </div>
             </div>
         </section>
+        <section class="product_block">
+            <div class="product_block_inner">
+                <div class="product_block_image">
+                    <img src="images/display_image.png" alt="">
+                </div>
+                <p class="product_block_title">Все товары на фирменной странице  магазина</p>
+            </div>
+        </section>
     </div> 
 </body>
 </html>
