--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
                 <p class="product_block_title">Все товары на фирменной странице  магазина</p>
             </div>
         </section>
+        <section class="sale_block">
+            <div class="sale_block_inner">
+                <h2 class="sale_block_title">C магазином на Tap.az продавать удобно!</h2>
+                <div class="sale_block_right_col">
+                    <p class="sale_block_descr">Оставьте свои контакты и мы с Вами свяжемся.</p>
+                    <form class="sale_block_form">
+                        <input placeholder="Имя" type="text">
+                        <input placeholder="Контактный номер" type="text">
+                        <div class="sale_btn_wrap">
+                            <a class="sale_btn btn" href="#">Подать заявку</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
     </div> 
 </body>
 </html>
