--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
                 </div>
             </div>
         </section>
-    </div> 
+    </div>
+    <footer>
+        <a class="footer_logo" href="#"><img src="images/footer_logo.svg" alt=""></a>
+        <nav class="fot_nav">
+            <ul>
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Реклама на сайте</a></li>
+                <li><a href="#">Пользовательское соглашение</a></li>
+            </ul>
+        </nav>
+        <div class="fot_social">
+            <a class="facebok" href="#"></a>
+            <a class="twit" href="#"></a>
+            <a class="in_social" href="#"></a>
+            <a class="p_social" href="#"></a>
+        </div>
+    </footer>
 </body>
 </html>
